--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <meta property="og:title" content="Los Radio Fantasmas - La Leyenda Continúa">
     <meta property="og:description" content="Más de 40 años de misterio regresan. No te pierdas el gran lanzamiento del podcast oficial.">
-    <meta property="og:image" content="banner%20los%20radio%20fantasmas.jpg">
+    <meta property="og:image" content="banner-los-radio-fantasmas.jpg">
     <meta property="og:url" content="https://losradiofantasmas.com.mx">
     <meta property="og:type" content="website">
 
@@ -88,3 +88,4 @@
 
 </body>
 </html>
+
