--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
 
     <main class="hero-container">
-        <img src="banner%20los%20radio%20fantasmas.jpg" 
+        <img src="banner-los-radio-fantasmas.jpg" 
              alt="Los Radio Fantasmas - Programa de radio paranormal con más de 40 años de trayectoria. Regreso oficial como podcast y tienda." 
              class="hero-image">
         
@@ -88,4 +88,5 @@
 
 </body>
 </html>
+
 
