--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
             justify-content: center;
         }
 
-        .hero-image {
-            width: 100%;
-            height: 100%;
-            object-fit: contain; 
-            animation: fadeIn 2.5s ease-in-out;
-        }
+       .hero-image {
+    width: 100vw;   /* Ocupa todo el ancho visual */
+    height: 100vh;  /* Ocupa todo el alto visual */
+    object-fit: cover; /* Ajusta la imagen para llenar el contenedor recortando lo mínimo necesario */
+    object-position: center; /* Asegura que el centro de la imagen siempre esté visible */
+    animation: fadeIn 2.5s ease-in-out;
+}
 
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -59,3 +60,4 @@
 
 </body>
 </html>
+
