--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
+
+        @media (max-width: 768px) {
+    .hero-image {
+        object-fit: contain; 
+    }
+}
     </style>
 </head>
 <body>
@@ -60,4 +66,5 @@
 
 </body>
 </html>
+
 
