--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <meta property="og:title" content="Radio Fantasmas - La Leyenda Continúa">
     <meta property="og:description" content="El programa legendario de misterio regresa en formato digital.">
-    <meta property="og:image" content="https://losradiofantasmas.com.mx/preview.jpg">
+    <meta property="og:image" content="https://losradiofantasmas.com.mx/preview.png">
     <meta property="og:url" content="https://losradiofantasmas.com.mx">
     <meta property="og:type" content="website">
 
@@ -150,6 +150,7 @@
 
 </body>
 </html>
+
 
 
 
