--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="shortcut icon" href="https://losradiofantasmas.com.mx/icono.png">
+    <link rel="icon" href="https://losradiofantasmas.com.mx/icono.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -150,6 +150,7 @@
 
 </body>
 </html>
+
 
 
 
